--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,17 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# VSCode
+.vscode/
+.history/
+*.DS_Store
+*.wpr
+*.wpu
+
+# Rasa stuff
+models/
+*.db*
+*.dot
+terms/
+results/
