--- a/domain.yml
+++ b/domain.yml
@@ -1,4 +1,4 @@
-version: '2.0'
+version: "3.1"
 config:
   store_entities_as_slots: true
 session_config:
@@ -27,7 +27,7 @@ entities: []
 slots: {}
 responses:
   utter_greet:
-  - text: Hey! How are you?
+  - text: Hey! Ask me for the capital of a country.
   utter_cheer_up:
   - image: https://i.imgur.com/nGF1K8f.jpg
     text: 'Here is something to cheer you up:'
