--- a/domain.yml
+++ b/domain.yml
@@ -27,7 +27,7 @@ entities: []
 slots: {}
 responses:
   utter_greet:
-  - text: Hey! Ask me for the capital of a country.
+  - text: Hey! How are you?
   utter_cheer_up:
   - image: https://i.imgur.com/nGF1K8f.jpg
     text: 'Here is something to cheer you up:'
